# robotfindskitten

./: .gitignore  .pre-commit-config.yaml  .yamllint.yml  AUTHORS  BUGS  COPYING  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  RELEASE  aclocal.m4  autogen.sh  config.cache  config.h  config.h.in  config.status  configure  configure.ac  configure.in  draw.h  libtool  robotfindskitten.documentation
.github/workflows/: robotfindsci.yml
.woodpecker/: pre-commit.yaml  robotfindsci.yaml
contrib/ports/inform/: kitten.inf
contrib/ports/palmos/: BUGS  CONTENTS  Makefile  constants.h  rfk-memo.c  rfk-palm.c  robotfindskitten.def  robotfindskitten.pbm  robotfindskitten.rcp.in  robotfindskittenRsc.h
contrib/ports/palmos/preprocess/: count_messages.c  tweak_rcp.pl
debian/: README.Debian  changelog  control  copyright  dirs  docs  info  robotfindskitten.6  rules
doc/: Makefile.am  Makefile.in  robotfindskitten.6  robotfindskitten.info  robotfindskitten.texi
nki/: Makefile.am  vanilla.nki
palmos/: BUGS  CONTENTS  Makefile  constants.h  preprocess_rcp.pl  rfk-memo.h  rfk-palm.c  robotfindskitten.rcp  robotfindskitten.rcp.in  robotfindskittenRsc.h
palmos/preprocess/: Makefile
share/: Makefile.am  org.robotfindskitten.robotfindskitten.metainfo.xml  robotfindskitten.desktop
src/: Makefile  Makefile.am  Makefile.in  cunit.c  cunit.h  messages.h  rfk  robotfindskitten.c  testrunner
