dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/draw.h)
AM_INIT_AUTOMAKE(robotfindskitten,v1600003.240b)
AM_CONFIG_HEADER(config.h)
AC_LANG_C

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, initscr)

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile src/Makefile doc/Makefile)
