dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/draw.h)
AM_INIT_AUTOMAKE(robotfindskitten,v1600003.240b)
AM_CONFIG_HEADER(config.h)
AC_LANG_C

dnl Checks for programs.
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_INSTALL

dnl Checks for libraries.
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, initscr)
AM_PATH_GLIB(1.2.8,,AC_MSG_ERROR(You need at least version 1.2.8 of glib))

dnl Checks for header files.
AC_CHECK_HEADERS(curses.h)

dnl Checks for typedefs, structures, and compiler characteristics.

dnl Checks for library functions.
AC_TYPE_SIGNAL

AC_OUTPUT(Makefile src/Makefile doc/Makefile)
