appicon512dir = $(datadir)/icons/hicolor/512x512/apps
appicon512_DATA = robotfindskitten.png

appiconscalabledir = $(datadir)/icons/hicolor/scalable/apps
appiconscalable_DATA = robotfindskitten.svg

appstreamdir = $(datadir)/metainfo
appstream_DATA = org.robotfindskitten.robotfindskitten.metainfo.xml

desktopdir = $(datadir)/applications
desktop_DATA = robotfindskitten.desktop

EXTRA_DIST=$(appicon512_DATA) $(appiconscalable_DATA) $(appstream_DATA) $(desktop_DATA)
